发布深度计的数据，并在水下模式时，用深度计数据屏蔽气压计数据 参与高度融合，融合的结果未测试

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -125,6 +125,7 @@ set(msg_file_names
 	mount_orientation.msg
 	collision_report.msg
 	guanghua_rc.msg
+	sensor_deep.msg
 	)
 
 # Get absolute paths
